--- a/index.html
+++ b/index.html
@@ -28,29 +28,32 @@
       <li>
         <p>Calculadora</p>
       <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="yLjOVoB" data-user="DaniellGouvea" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/DaniellGouvea/pen/yLjOVoB">
-  Conversor de moedas - ID3</a> by Luiz Daniel (<a href="https://codepen.io/DaniellGouvea">@DaniellGouvea</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <span>See the Pen <a href="https://codepen.io/DaniellGouvea/pen/yLjOVoB">
+        Conversor de moedas - ID3</a> by Luiz Daniel (<a href="https://codepen.io/DaniellGouvea">@DaniellGouvea</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+        </span>
+      </p>
+      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       </li>
       <li>
         <p>Mentalista</p>
         <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="dyeMeZo" data-user="DaniellGouvea" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/DaniellGouvea/pen/dyeMeZo">
-  Mentalista - Desafios</a> by Luiz Daniel (<a href="https://codepen.io/DaniellGouvea">@DaniellGouvea</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <span>See the Pen <a href="https://codepen.io/DaniellGouvea/pen/dyeMeZo">
+        Mentalista - Desafios</a> by Luiz Daniel (<a href="https://codepen.io/DaniellGouvea">@DaniellGouvea</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+        </span>
+      </p>
+      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       </li>
       <li>
         <p>SuperTrunfo</p>
         <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="MWGbEqZ" data-user="DaniellGouvea" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/DaniellGouvea/pen/MWGbEqZ">
-  Super Trunfo - Dia 8</a> by Luiz Daniel (<a href="https://codepen.io/DaniellGouvea">@DaniellGouvea</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <span>See the Pen <a href="https://codepen.io/DaniellGouvea/pen/MWGbEqZ">
+        Super Trunfo - Dia 8</a> by Luiz Daniel (<a href="https://codepen.io/DaniellGouvea">@DaniellGouvea</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </span>
+      </p>
+      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       </li>
     </div>
 <!-- partial -->
